--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           if (data == "Approved") {
             decision.innerHTML = `Congratulations! Your visa has been approved.`;
             triggerConfetti();
-          } else if (data == "Rejected") {
+          } else if (data == "Refused") {
             decision.innerHTML = `Sorry! Your visa has been rejected.`;
           } else {
             decision.innerHTML = `No decision yet.`;
